added 4 services images to project and added 2 containers around

--- a/our-services.html
+++ b/our-services.html
@@ -74,11 +74,12 @@
 <!-- 3rd section - Proprietor Bio -->
 <!-- 3rd section - Bootstrap Carousel -->
 
-<section id="bio title">
+<section id="bio-title">
 <div class="container">
 <div class="row">
 <div class="col-md-12">
 <h2>Proprietor Bio</h2>
+</div>
 </section>
 
 <section id="bio">
@@ -111,41 +112,50 @@
 </div>
     </section>
 
+<!-- 4th section - services-title - row 1 -->
 
+<section id="services-title">
+<div class="container">
+<div class="row">
+<div class="col-md-12">
+<h2>Our Services</h2>
+</div>
+</section>
 
     <!-- 4th section - services - row 1 -->
 
   <section id="services">
+   <div class="container">
    <div class="row">
   <div class="col-md-3">
-  <h2>Our Services</h2>
-<p id="services">Studiofettle Personal Training</p>
+<p>Yoga Moves</p>
 </div>
 <div class="col-md-3">
-<p>Image</p>
+<img src="assets/images/yoga-moves.png" alt="yoga-moves" class="img-thumbnail"/></div>
 </div>
 <div class="col-md-3">
-<p id="services">Yoga Moves</p>
+<p>Hypnotherapy</p>
 </div>
 <div class="col-md-3">
-<p>Image</p>
+<img src="assets/images/hypnotherapy.jpg" alt="hypnotherapy" class="img-thumbnail"/></div>
 </div>
 </div>
+   </div>
 
-<!-- 4th section - services - row 2 -->
-
+<div class="container">
 <div class="row">
 <div class="col-md-3">
-<p id="services">Genevieve Pilates</p>
+<p>Genevieve Pilates</p>
 </div>
 <div class="col-md-3">
-<p>Image</p>
+<img src="assets/images/genevieve-pilates.jpg" alt="genevieve-pilates" class="img-thumbnail"/></div>
 </div>
 <div class="col-md-3">
-<p id="services">Massage Therapy</p>
+<p>Massage Therapy</p>
 </div>
 <div class="col-md-3">
-<p>Image</p>
+<img src="assets/images/massage.jpg" alt="massage-room" class="img-thumbnail"/></div>
+</div>
 </div>
 </div>
     </section>  
