changed col-6 bg-col-main on all pages to col-12

--- a/our-services.html
+++ b/our-services.html
@@ -17,9 +17,9 @@
 <!-- Navbar -->
 
 <header class="container-fluid">
-<div class="row" class="col-6 bg-col-main">
+<div class="row" class="col-12 bg-col-main">
 </div>
-<div class="col-6 bg-col-main">
+<div class="col-12 bg-col-main">
 <nav class="navbar navbar-expand-sm navbar-light bg-light">
    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -122,7 +122,7 @@
 </div>
 </section>
 
-    <!-- 4th section - services - row 1 -->
+    <!--4th section - services-->
 
   <section id="services">
    <div class="container">
@@ -134,21 +134,20 @@
 <img src="assets/images/yoga-moves.png" alt="yoga-moves" class="img-thumbnail"/></div>
 </div>
 <div class="col-md-3">
-<p>Hypnotherapy</p>
-</div>
-<div class="col-md-3">
-<img src="assets/images/hypnotherapy.jpg" alt="hypnotherapy" class="img-thumbnail"/></div>
-</div>
-</div>
-   </div>
-
-<div class="container">
-<div class="row">
-<div class="col-md-3">
 <p>Genevieve Pilates</p>
 </div>
 <div class="col-md-3">
 <img src="assets/images/genevieve-pilates.jpg" alt="genevieve-pilates" class="img-thumbnail"/></div>
+</div>
+</div>
+   </div>
+<div class="container">
+<div class="row">
+<div class="col-md-3">
+<p>Hypnotherapy</p>
+</div>
+<div class="col-md-3">
+<img src="assets/images/hypnotherapy.jpg" alt="hypnotherapy" class="img-thumbnail"/></div>
 </div>
 <div class="col-md-3">
 <p>Massage Therapy</p>
