created to separate containers for about us title and the paragraph. Added line breaks

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <!-- 1st section - company name / philosophy-->
 
 <section id="company-name">
-<div class="container">
+<div class="container-fluid">
 <div class="row">
 <div class="col-md-12">
       <h1 class="studiofettle">Studiofettle Mind & Body Studio</h1> 
@@ -72,17 +72,20 @@
 
 <!-- 3rd section - About us -->
 
-<section id="about us">
+
+<section id="about-us-title">
 <div class="container">
 <div class="row">
 <div class="col-md-12">
       <h2>About Us</h2> 
-      <p id="about-us-paragraph">Fettle: Meaning 'Working order' and 'Optimal state of wellbeing'. 
-      
-      Here at Studiofettle thats exactly how we want you to feel. Our philosophy prides itself in ensuring we together 
+      </div>
+</section>
 
-      create and encourage good health and a positive mind. We are a wellbeing studio, focusing on you.
-      
+<section id="about-us-paragraph">
+      <p>Fettle: Meaning 'Working order' and 'Optimal state of wellbeing'. 
+      <br/>
+      Here at Studiofettle thats exactly how we want you to feel. Our philosophy prides itself in ensuring we together create and encourage good health and a positive mind. We are a wellbeing studio, focusing on you.
+      <br/>
       Take a look at the services we have on offer all of which ensure you will develop both physically and mentally.</p>
     </div>
     </div>
