Finalised the About Us Write up

--- a/index.html
+++ b/index.html
@@ -82,11 +82,20 @@
 </section>
 
 <section id="about-us-paragraph">
-      <p>Fettle: Meaning 'Working order' and 'Optimal state of wellbeing'. 
+      <p>Fettle: 
       <br/>
-      Here at Studiofettle thats exactly how we want you to feel. Our philosophy prides itself in ensuring we together create and encourage good health and a positive mind. We are a wellbeing studio, focusing on you.
+      Meaning 'Working order' and 'Optimal state of wellbeing'. 
       <br/>
-      Take a look at the services we have on offer all of which ensure you will develop both physically and mentally.</p>
+      Here at Studiofettle thats exactly how we want you to feel. 
+      <br/>
+      Our philosophy prides itself in ensuring we together create and encourage good health and a positive mind. 
+      <br/>
+      We are a wellbeing studio, focusing on you.
+      <br/>
+      The range of services we have on offer all ensure you will develop both physically and mentally.
+      <br/>
+      We become a team, we become a family, we hold one simple outlook. To feel great and hold strong minds.
+      </p>
     </div>
     </div>
     </div>
