--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 
 <section id="about-us-title">
-<div class="container">
+<div class="container-fluid">
 <div class="row">
 <div class="col-md-12">
       <h2>About Us</h2> 
@@ -103,21 +103,35 @@
 
     <!-- 4th section - Testimonials -->
 
+    <section id="testimonial-title">
+<div class="container-fluid">
+<div class="row">
+<div class="col-md-12">
+      <h2>Testimonials</h2>
+      </div>
+</section>
+
+
     <section id="testimonials">
    <div class="container">
    <div class="row">
-   <h2>Testimonials</h2>
   <div class="col-sm-12 col-md-3">
-<p id="testimonials">Jess: Truly amazing - "I love the atmosphere at Studiofettle, it makes you feel happy whatever service you take"</p>
+<p>Jess: Truly amazing
+<br/>
+"I love the atmosphere at Studiofettle, it makes you feel happy whatever service you take"</p>
 </div>
 <div class="col-sm-12 col-md-3">
-<img src="assets/images/client-1-pexels-photo-3545784.jpeg" alt="client-1" class="img-thumbnail"/></div>
+<img src="assets/images/Client-1-sm-pexels-photo-3545784.jpeg" alt="client-1" class="img-thumbnail"/></div>
+</div>
+<div class="container">
+   <div class="row">
+<div class="col-sm-12 col-md-3">
+<p>Sharon: I feel alive
+<br/>
+"Everytime I leave from my PT session, I feel confident and full of energy"</p>
 </div>
 <div class="col-sm-12 col-md-3">
-<p id="testimonials">Sharon: I feel alive - "Everytime I leave from my PT session, I feel confident and full of energy"</p>
-</div>
-<div class="col-sm-12 col-md-3">
-<img src="assets/images/client-2-pexels-photo-774909.jpeg" alt="client-2" class="img-thumbnail"/></div>
+<img src="assets/images/client-2-small-pexels-photo-774909.jpeg" alt="client-2" class="img-thumbnail"/></div>
 </div>
 </div>
 </div>
