--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
 
     <section id="testimonials">
-   <div class="container">
+   <div class="container-fluid">
    <div class="row">
   <div class="col-sm-12 col-md-3">
 <p>Jess: Truly amazing
@@ -123,7 +123,7 @@
 <div class="col-sm-12 col-md-3">
 <img src="assets/images/Client-1-sm-pexels-photo-3545784.jpeg" alt="client-1" class="img-thumbnail"/></div>
 </div>
-<div class="container">
+<div class="container-fluid">
    <div class="row">
 <div class="col-sm-12 col-md-3">
 <p>Sharon: I feel alive
@@ -139,7 +139,8 @@
 
 <!-- 5th section - find us here -->
 
-<section id="Find-us-here">
+<section id="find-us-here">
+<div class="container-fluid">
 <div class="row">
 <div class="col-md-12">
       <h2>Find us here</h2> 
