--- a/our-services.html
+++ b/our-services.html
@@ -161,7 +161,8 @@
 
 <!-- 5th section - find us here -->
 
- <section id="Find-us-here">
+ <section id="find-us-here">
+<div class="container-fluid">
 <div class="row">
 <div class="col-md-12">
       <h2>Find us here</h2> 
