additional testing of positioning services logos

--- a/our-services.html
+++ b/our-services.html
@@ -127,33 +127,34 @@
   <section id="services">
    <div class="container">
    <div class="row">
-  <div class="col-md-3">
+   <p>Massage Therapy</p>
+  <div class="col-sm-12 col-md-3">
+</div>
+<div class="col-sm-12 col-md-3">
+<img src="assets/images/massage.jpg" alt="massage-room" class="img-thumbnail"/></div>
+</div>
 <p>Yoga Moves</p>
+<div class="col-sm-12 col-md-3">
 </div>
-<div class="col-md-3">
+<div class="col-sm-12 col-md-3">
 <img src="assets/images/yoga-moves.png" alt="yoga-moves" class="img-thumbnail"/></div>
-</div>
-<div class="col-md-3">
-<p>Genevieve Pilates</p>
-</div>
-<div class="col-md-3">
-<img src="assets/images/genevieve-pilates.jpg" alt="genevieve-pilates" class="img-thumbnail"/></div>
 </div>
 </div>
    </div>
-<div class="container">
+
+   <div class="container">
 <div class="row">
-<div class="col-md-3">
 <p>Hypnotherapy</p>
+<div class="col-sm-12 col-md-3">
 </div>
-<div class="col-md-3">
+<div class="col-sm-12 col-md-3">
 <img src="assets/images/hypnotherapy.jpg" alt="hypnotherapy" class="img-thumbnail"/></div>
 </div>
-<div class="col-md-3">
-<p>Massage Therapy</p>
+<p>Genevieve Pilates</p>
+<div class="col-sm-12 col-md-3">
 </div>
-<div class="col-md-3">
-<img src="assets/images/massage.jpg" alt="massage-room" class="img-thumbnail"/></div>
+<div class="col-sm-12 col-md-3">
+<img src="assets/images/genevieve-pilates.jpg" alt="genevieve-pilates" class="img-thumbnail"/></div>
 </div>
 </div>
 </div>
