--- a/our-services.html
+++ b/our-services.html
@@ -173,7 +173,7 @@
 
 <!-- Footer - Contact details -->
 
-<footer>
+<footer class="footer-background">
     <div class="container">
     <div class="row">
     <div class="col-sm-12 col-md-4">
