changed social media to Facebook as client only has 1 social media site

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     <p>Email: studiofettle@info.co.uk</p>
   </div>
   <div class="col-sm-12 col-md-4">
-    <h4>Social Media</h4>
+    <h4>Facebook</h4>
     <a href="https://www.facebook.com/studiofettle/" i class="fab fa-facebook-square" id="fb-font-size"></i></a>
   </div>
 </div>
