--- a/join-us.html
+++ b/join-us.html
@@ -125,7 +125,7 @@
 
 <!-- Footer - Contact details -->
 
-<footer>
+<footer class="footer-background">
     <div class="container">
     <div class="row">
     <div class="col-sm-12 col-md-4">
@@ -139,7 +139,7 @@
     <p>Email: studiofettle@info.co.uk</p>
   </div>
   <div class="col-sm-12 col-md-4">
-    <h4>Social Media</h4>
+    <h4>Facebook</h4>
     <a href="https://www.facebook.com/studiofettle/" i class="fab fa-facebook-square" id="fb-font-size"></i></a>
   </div>
 </div>
