--- a/join-us.html
+++ b/join-us.html
@@ -84,28 +84,29 @@
 
 <!-- 4th section - call to action form -->
 
+<section class="form">
     <form>
+    <div class="container-fluid">
   <div class="row">
-    <div class="col">
+    <div class="col-sm-12 col-md-6">
       <input type="text" class="form-control" placeholder="First name">
     </div>
-    <div class="col">
+    <div class="col-sm-12 col-md-6">
       <input type="text" class="form-control" placeholder="Last name">
 </div>
   </div>
 
       <div class="row">
-    <div class="col">
+    <div class="col-sm-12 col-md-6">
       <input type="text" class="form-control" placeholder="Telephone">
     </div>
-    <div class="col">
+    <div class="col-sm-12 col-md-6">
       <input type="text" class="form-control" placeholder="Email Address">
     </div>
   </div>
-
   <div class="form-group">
-    <label for="exampleFormControlTextarea1">Message us and we will be in touch.</label>
-    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+  <label for="exampleFormControlTextarea1"></label>
+    <textarea class="form-control" id="exampleFormControlTextarea1" rows="6"></textarea>
     <button type="button" class="btn btn-success">Success</button>
   </div>
   </div>
