added container-fluid to join us section

--- a/join-us.html
+++ b/join-us.html
@@ -74,6 +74,7 @@
 <!-- 3rd section - Join Us -->
 
 <section id="join-us">
+<div class="container-fluid">
 <div class="row">
 <div class="col-md-12">
       <h2>Join Us</h2> 
@@ -95,7 +96,6 @@
       <input type="text" class="form-control" placeholder="Last name">
 </div>
   </div>
-
       <div class="row">
     <div class="col-sm-12 col-md-6">
       <input type="text" class="form-control" placeholder="Telephone">
@@ -106,8 +106,8 @@
   </div>
   <div class="form-group">
   <label for="exampleFormControlTextarea1"></label>
-    <textarea class="form-control" id="exampleFormControlTextarea1" rows="6"></textarea>
-    <button type="button" class="btn btn-success">Success</button>
+    <textarea class="form-control" placeholder="Message here" rows="6"></textarea>
+    <button type="button" class="btn btn-success">Join Us</button>
   </div>
   </div>
   </div>
