changed bootstrap button from green success to blue info-style

--- a/join-us.html
+++ b/join-us.html
@@ -107,7 +107,7 @@
   <div class="form-group">
   <label for="exampleFormControlTextarea1"></label>
     <textarea class="form-control" placeholder="Message here" rows="6"></textarea>
-    <button type="button" class="btn btn-success">Join Us</button>
+    <button type="button" class="btn btn-info">Join Us</button>
   </div>
   </div>
   </div>
