added line break to form message

--- a/join-us.html
+++ b/join-us.html
@@ -78,7 +78,9 @@
 <div class="row">
 <div class="col-md-12">
       <h2>Join Us</h2> 
-      <p>We welcome your interest in Studiofettle. Please message us to start your journey.</p>
+      <p>We welcome your interest in Studiofettle. 
+      <br/>
+      Please message us to start your journey.</p>
     </div>
     </div>
     </section>
