removed some css that was not longer valid

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <!-- 3rd section - About us -->
 
 
-<section id="about-us-title">
+<section id="about-us-heading">
 <div class="container-fluid">
 <div class="row">
 <div class="col-md-12">
