add .heading class to all h2 and removed h2 in css and added .heading

--- a/join-us.html
+++ b/join-us.html
@@ -77,7 +77,7 @@
 <div class="container-fluid">
 <div class="row">
 <div class="col-md-12">
-      <h2>Join Us</h2> 
+      <h2 class="heading">Join Us</h2> 
       <p>We welcome your interest in Studiofettle. 
       <br/>
       Please message us to start your journey.</p>
@@ -121,7 +121,7 @@
 <div class="container-fluid">
 <div class="row">
 <div class="col-md-12">
-      <h2>Find us here</h2> 
+      <h2 class="heading">Find us here</h2> 
     </div>
     </div>
     </section>     
