--- a/our-services.html
+++ b/our-services.html
@@ -78,7 +78,7 @@
 <div class="container">
 <div class="row">
 <div class="col-md-12">
-<h2>Proprietor Bio</h2>
+<h2 class="heading">Proprietor Bio</h2>
 </div>
 </section>
 
@@ -118,7 +118,7 @@
 <div class="container">
 <div class="row">
 <div class="col-md-12">
-<h2>Our Services</h2>
+<h2 class="heading">Our Services</h2>
 </div>
 </section>
 
@@ -166,7 +166,7 @@
 <div class="container-fluid">
 <div class="row">
 <div class="col-md-12">
-      <h2>Find us here</h2> 
+      <h2 class="heading">Find us here</h2> 
     </div>
     </div>
     </section>    
