--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <div class="container-fluid">
 <div class="row">
 <div class="col-md-12">
-      <h2>About Us</h2> 
+      <h2 class="heading">About Us</h2> 
       </div>
 </section>
 
@@ -107,7 +107,7 @@
 <div class="container-fluid">
 <div class="row">
 <div class="col-md-12">
-      <h2>Testimonials</h2>
+      <h2 class="heading">Testimonials</h2>
       </div>
 </section>
 
@@ -143,7 +143,7 @@
 <div class="container-fluid">
 <div class="row">
 <div class="col-md-12">
-      <h2>Find us here</h2> 
+      <h2 class="heading">Find us here</h2> 
     </div>
     </div>
     </section> 
