amended some padding

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 </section>
 
 <section id="about-us-paragraph">
-      <p>Fettle: 
+      <p>Fettle 
       <br/>
       Meaning 'Working order' and 'Optimal state of wellbeing'. 
       <br/>
