made changes to headings in footer

--- a/index.html
+++ b/index.html
@@ -151,15 +151,15 @@
 <!-- Footer - Contact details -->
 
 <footer class="footer-background">
-    <div class="container">
+    <div class="container-fluid">
     <div class="row">
     <div class="col-sm-12 col-md-4">
-    <h4>Address</h4>
+    <h4>Studiofettle</h4>
        <p>Wilton Road, Humberston</p>
        <p>NE Lincs, DN31 2JF</p>
   </div>
   <div class="col-sm-12 col-md-4">
-    <h4>Contact Details</h4>
+    <h4>Join Us</h4>
     <p>Tel: 01472 123456</p>
     <p>Email: studiofettle@info.co.uk</p>
   </div>
