--- a/join-us.html
+++ b/join-us.html
@@ -78,9 +78,7 @@
 <div class="row">
 <div class="col-md-12">
       <h2 class="heading">Join Us</h2> 
-      <p>We welcome your interest in Studiofettle. 
-      <br/>
-      Please message us to start your journey.</p>
+      <p>We welcome your interest in Studiofettle. Please message us to start your journey.</p>
     </div>
     </div>
     </section>
@@ -92,23 +90,23 @@
     <div class="container-fluid">
   <div class="row">
     <div class="col-sm-12 col-md-6">
-      <input type="text" class="form-control" placeholder="First name">
+      <input type="text" class="form-control" placeholder="First name" required>
     </div>
     <div class="col-sm-12 col-md-6">
-      <input type="text" class="form-control" placeholder="Last name">
+      <input type="text" class="form-control" placeholder="Last name" required>
 </div>
   </div>
       <div class="row">
     <div class="col-sm-12 col-md-6">
-      <input type="text" class="form-control" placeholder="Telephone">
+      <input type="text" class="form-control" placeholder="Telephone" required>
     </div>
     <div class="col-sm-12 col-md-6">
-      <input type="text" class="form-control" placeholder="Email Address">
+      <input type="text" class="form-control" placeholder="Email Address" required>
     </div>
   </div>
   <div class="form-group">
   <label for="exampleFormControlTextarea1"></label>
-    <textarea class="form-control" placeholder="Message here" rows="6"></textarea>
+    <textarea class="form-control" placeholder="Message here" rows="6" required></textarea>
     <button type="button" class="btn btn-info">Join Us</button>
   </div>
   </div>
@@ -129,15 +127,15 @@
 <!-- Footer - Contact details -->
 
 <footer class="footer-background">
-    <div class="container">
+    <div class="container-fluid">
     <div class="row">
     <div class="col-sm-12 col-md-4">
-    <h4>Address</h4>
+    <h4>Studiofettle</h4>
        <p>Wilton Road, Humberston</p>
        <p>NE Lincs, DN31 2JF</p>
   </div>
   <div class="col-sm-12 col-md-4">
-    <h4>Contact Details</h4>
+    <h4>Join Us</h4>
     <p>Tel: 01472 123456</p>
     <p>Email: studiofettle@info.co.uk</p>
   </div>
