added container-fluid to both headings on our services page

--- a/our-services.html
+++ b/our-services.html
@@ -71,11 +71,11 @@
 </div>
     </section>
 
-<!-- 3rd section - Proprietor Bio -->
-<!-- 3rd section - Bootstrap Carousel -->
+<!--3rd section - Proprietor Bio-->
+<!---Bootstrap Carousel-->
 
 <section id="bio-title">
-<div class="container">
+<div class="container-fluid">
 <div class="row">
 <div class="col-md-12">
 <h2 class="heading">Proprietor Bio</h2>
@@ -115,7 +115,7 @@
 <!-- 4th section - services-title - row 1 -->
 
 <section id="services-title">
-<div class="container">
+<div class="container-fluid">
 <div class="row">
 <div class="col-md-12">
 <h2 class="heading">Our Services</h2>
