added a rows to services section to align, added t ext on the services

--- a/our-services.html
+++ b/our-services.html
@@ -72,7 +72,6 @@
     </section>
 
 <!--3rd section - Proprietor Bio-->
-<!---Bootstrap Carousel-->
 
 <section id="bio-title">
 <div class="container-fluid">
@@ -81,6 +80,8 @@
 <h2 class="heading">Proprietor Bio</h2>
 </div>
 </section>
+
+<!---Bootstrap Carousel-->
 
 <section id="bio">
 <div class="container">
@@ -112,7 +113,7 @@
 </div>
     </section>
 
-<!-- 4th section - services-title - row 1 -->
+<!--4th section - services-->
 
 <section id="services-title">
 <div class="container-fluid">
@@ -122,19 +123,21 @@
 </div>
 </section>
 
-    <!--4th section - services-->
 
   <section id="services">
    <div class="container">
    <div class="row">
-   <p>Massage Therapy</p>
   <div class="col-sm-12 col-md-3">
+  <p>Massage Therapy</p>
+  <p>We offer sports massage, full relaxation, hot stone, book in with our therapists</p>
 </div>
 <div class="col-sm-12 col-md-3">
 <img src="assets/images/massage.jpg" alt="massage-room" class="img-thumbnail"/></div>
 </div>
-<p>Yoga Moves</p>
+<div class="row">
 <div class="col-sm-12 col-md-3">
+<p>Yoga Moves</p>
+<p>Yoga moves brings peace and tranquility, join us to relax the mind</p>
 </div>
 <div class="col-sm-12 col-md-3">
 <img src="assets/images/yoga-moves.png" alt="yoga-moves" class="img-thumbnail"/></div>
@@ -144,14 +147,17 @@
 
    <div class="container">
 <div class="row">
-<p>Hypnotherapy</p>
 <div class="col-sm-12 col-md-3">
+<p>Hypnotherapy</p>
+<p>Hpnotherapy can ease many life issues, book in a session to work on freeing your mind</p>
 </div>
 <div class="col-sm-12 col-md-3">
 <img src="assets/images/hypnotherapy.jpg" alt="hypnotherapy" class="img-thumbnail"/></div>
 </div>
-<p>Genevieve Pilates</p>
+<div class="row">
 <div class="col-sm-12 col-md-3">
+<p>Genevieve Pilates</p>
+<p>Join Genevieve for weekly pilates, be quick its popular</p>
 </div>
 <div class="col-sm-12 col-md-3">
 <img src="assets/images/genevieve-pilates.jpg" alt="genevieve-pilates" class="img-thumbnail"/></div>
