--- a/our-services.html
+++ b/our-services.html
@@ -17,9 +17,9 @@
 <!-- Navbar -->
 
 <header class="container-fluid">
-<div class="row" class="col-12 bg-col-main">
+<div class="row" class="col-12">
 </div>
-<div class="col-12 bg-col-main">
+<div class="col-12">
 <nav class="navbar navbar-expand-sm navbar-light bg-light">
    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
