--- a/our-services.html
+++ b/our-services.html
@@ -102,13 +102,17 @@
   </div>
   </div>
 <div class="col-sm-6 col-md-6">
-<p>Rachael, owner of Studiofettle. Health and wellbeing. Rachael, owner of Studiofettle. Health and wellbeing. 
+<p>Rachael, owner of Studiofettle, prides herself in promoting health and wellbeing. 
 
-   Rachael, owner of Studiofettle. Health and wellbeing. Rachael, owner of Studiofettle. Health and wellbeing.</p>
+   With a career stemming from customer service, mental health and personal training, the studio is a haven for feel good services.</p>
 
-<p>Rachael, owner of Studiofettle. Health and wellbeing. Rachael, owner of Studiofettle. Health and wellbeing. 
+<p>Rachael herself delivers PT sessions for all levels tailoring every session to your needs. 
 
-   Rachael, owner of Studiofettle. Health and wellbeing. Rachael, owner of Studiofettle. Health and wellbeing.</p>
+With a portfolio of clients, including injury, pre wedding, pre and post baby, there are success stories galore.</p>
+
+<p>"I PT various clients, all with a story to tell. So we tailor their sessions to their individual requirements. The main thing is together we reach their goals, build their confidence and they leave feeling fantastic".</p>
+
+<p>Studiofettle is not a gym its a wellbeing center that promotes healthy body, healthy mind and a positive you!</p>
 </div>
 </div>
     </section>
