added missed containers in company name in 2 pages

--- a/join-us.html
+++ b/join-us.html
@@ -44,7 +44,7 @@
 <!-- 1st section - company name / philosophy -->
 
 <section id="company-name">
-<div class="container">
+<div class="container-fluid">
 <div class="row">
 <div class="col-md-12">
       <h1 class="studiofettle">Studiofettle Mind & Body Studio</h1> 
