copy/paste the navbar into our-services now its looking better finally

--- a/our-services.html
+++ b/our-services.html
@@ -16,11 +16,8 @@
 
 <!-- Navbar -->
 
-<header class="container-fluid">
-<div class="row" class="col-12">
-</div>
-<div class="col-12">
-<nav class="navbar navbar-expand-sm navbar-light bg-light">
+<header>
+<nav class="navbar navbar-expand-sm navbar-dark">
    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -39,7 +36,6 @@
   </div>
 </nav>
 </header>
-
 
 <!-- 1st section - company name / philosophy -->
 
