--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <div class="container-fluid">
 <div class="row">
 <div class="col-md-12">
-      <h2 class="heading">About Us</h2> 
+      <h2 class="heading-2">About Us</h2> 
       </div>
 </section>
 
@@ -104,7 +104,7 @@
 <div class="container-fluid">
 <div class="row">
 <div class="col-md-12">
-      <h2 class="heading">Testimonials</h2>
+      <h2 class="heading-2">Testimonials</h2>
       </div>
 </section>
 
@@ -140,7 +140,7 @@
 <div class="container-fluid">
 <div class="row">
 <div class="col-md-12">
-      <h2 class="heading">Find us here</h2> 
+      <h2 class="heading-2">Find us here</h2> 
     </div>
     </div>
     </section> 
