--- a/join-us.html
+++ b/join-us.html
@@ -74,7 +74,7 @@
 <div class="container-fluid">
 <div class="row">
 <div class="col-md-12">
-      <h2 class="heading">Join Us</h2> 
+      <h2 class="heading-2">Join Us</h2> 
       <p>We welcome your interest in Studiofettle. Please message us to start your journey.</p>
     </div>
     </div>
@@ -116,7 +116,7 @@
 <div class="container-fluid">
 <div class="row">
 <div class="col-md-12">
-      <h2 class="heading">Find us here</h2> 
+      <h2 class="heading-2">Find us here</h2> 
     </div>
     </div>
     </section>     
