changed h3 to .heading-3 in html and css. index.html page

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <div class="row">
 <div class="col-md-12">
       <h1 class="studiofettle">Studiofettle Mind & Body Studio</h1> 
-      <h3>Fettle</h3>
+      <h3 class="heading-3">Fettle</h3>
       <p id="paragraph-size-specific">"meaning working order" and "optimal state of wellbeing"</p>
 </div>
 </div>
