--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
 
 
 <section id="about-us-heading">
-<div class="container-fluid">
+<div class="container">
 <div class="row">
 <div class="col-md-12">
-      <h2 class="heading-2">About Us</h2> 
+      <h2 class="heading-2 text-center">About Us</h2> 
       </div>
 </section>
 
