--- a/our-services.html
+++ b/our-services.html
@@ -73,7 +73,7 @@
 <div class="container-fluid">
 <div class="row">
 <div class="col-md-12">
-<h2 class="heading-2">Proprietor Bio</h2>
+<h2 class="heading-2 text-center">Proprietor Bio</h2>
 </div>
 </section>
 
@@ -119,7 +119,7 @@ With a portfolio of clients, including injury, pre wedding, pre and post baby, t
 <div class="container-fluid">
 <div class="row">
 <div class="col-md-12">
-<h2 class="heading-2">Our Services</h2>
+<h2 class="heading-2 text-center">Our Services</h2>
 </div>
 </section>
 
@@ -172,7 +172,7 @@ With a portfolio of clients, including injury, pre wedding, pre and post baby, t
 <div class="container-fluid">
 <div class="row">
 <div class="col-md-12">
-      <h2 class="heading-2">Find us here</h2> 
+      <h2 class="heading-2 text-center">Find us here</h2> 
     </div>
     </div>
     </section>    
