added extra row in about us section added text center

--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 <div class="col-md-12">
       <h2 class="heading-2 text-center">About Us</h2> 
       </div>
-</section>
-
-<section id="about-us-paragraph">
+      </div>
+      <div class="row">
+    <div class="col-md-12 about-us-paragraph text-center">
       <p>Fettle 
       <br/>
       Meaning 'Working order' and 'Optimal state of wellbeing'. 
