removed line br, untidy code. Using bootstrap text center instead

--- a/index.html
+++ b/index.html
@@ -79,20 +79,11 @@
       </div>
       <div class="row">
     <div class="col-md-12 about-us-paragraph text-center">
-      <p>Fettle 
-      <br/>
-      Meaning 'Working order' and 'Optimal state of wellbeing'. 
-      <br/>
-      Here at Studiofettle thats exactly how we want you to feel. 
-      <br/>
-      Our philosophy prides itself in ensuring we together create and encourage good health and a positive mind. 
-      <br/>
-      We are a wellbeing studio, focusing on you.
-      <br/>
-      The range of services we have on offer all ensure you will develop both physically and mentally.
-      <br/>
-      We become a team, we become a family, we hold one simple outlook. To feel great and hold strong minds.
-      </p>
+      <p>Fettle, Meaning 'Working order' and 'Optimal state of wellbeing'. Here at Studiofettle thats exactly how we want you to feel.</p> 
+      <p>Our philosophy prides itself in ensuring we together create and encourage good health and a positive mind. 
+            We are a wellbeing studio, focusing on you.
+            The range of services we have on offer all ensure you will develop both physically and mentally.
+            We become a team, we become a family, together we hold one simple outlook: To feel great and hold strong minds.</p>
     </div>
     </div>
     </div>
