changed col-md-12 to col-sm-12 in about us heading

--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
 <section id="about-us-heading">
 <div class="container">
 <div class="row">
-<div class="col-md-12">
+<div class="col-sm-12">
       <h2 class="heading-2 text-center">About Us</h2> 
       </div>
       </div>
       <div class="row">
-    <div class="col-md-12 about-us-paragraph text-center">
+    <div class="col-sm-12 about-us-paragraph text-center">
       <p>Fettle, Meaning 'Working order' and 'Optimal state of wellbeing'. Here at Studiofettle thats exactly how we want you to feel.</p> 
       <p>Our philosophy prides itself in ensuring we together create and encourage good health and a positive mind. 
             We are a wellbeing studio, focusing on you.
