removed not need testimonial container and section reducing entire section to 1 container, 2 rows

--- a/index.html
+++ b/index.html
@@ -92,16 +92,12 @@
     <!-- 4th section - Testimonials -->
 
     <section id="testimonial-title">
-<div class="container-fluid">
+<div class="container">
 <div class="row">
 <div class="col-md-12">
       <h2 class="heading-2 text-center">Testimonials</h2>
       </div>
-</section>
-
-
-    <section id="testimonials">
-   <div class="container-fluid">
+</div>
    <div class="row">
   <div class="col-sm-12 col-md-3">
 <p>Jess: Truly amazing
