--- a/index.html
+++ b/index.html
@@ -94,27 +94,27 @@
     <section id="testimonial-title">
 <div class="container">
 <div class="row">
-<div class="col-md-12">
+<div class="col-sm-12">
       <h2 class="heading-2 text-center">Testimonials</h2>
       </div>
 </div>
    <div class="row">
-  <div class="col-sm-12 col-md-3">
+  <div class="col-sm-12 col-md-6">
 <p>Jess: Truly amazing
 <br/>
 "I love the atmosphere at Studiofettle, it makes you feel happy whatever service you take"</p>
 </div>
-<div class="col-sm-12 col-md-3">
+<div class="col-sm-12 col-md-6">
 <img src="assets/images/Client-1-sm-pexels-photo-3545784.jpeg" alt="client-1" class="img-thumbnail"/></div>
 </div>
 <div class="container-fluid">
    <div class="row">
-<div class="col-sm-12 col-md-3">
+<div class="col-sm-12 col-md-6">
 <p>Sharon: I feel alive
 <br/>
 "Everytime I leave from my PT session, I feel confident and full of energy"</p>
 </div>
-<div class="col-sm-12 col-md-3">
+<div class="col-sm-12 col-md-6">
 <img src="assets/images/client-2-small-pexels-photo-774909.jpeg" alt="client-2" class="img-thumbnail"/></div>
 </div>
 </div>
