found a missed closing tag </p> in testimonial speech

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 </div>
 <div class="col-sm-12 col-md-6">
     <img src="assets/images/client-2-small-pexels-photo-774909.jpeg" alt="client-2" class="img-thumbnail"/></div>
-    <p>Sharon: I feel alive<p>
+    <p>Sharon: I feel alive</div>
     <p>"Everytime I leave from my PT session, I feel confident and full of energy"</p>
 </div>
 </div>
