removed some divs that where causing error in lay out

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     <!-- 4th section - Testimonials -->
 
-    <section id="testimonial-title">
+    <section id="testimonials">
 <div class="container">
 <div class="row">
 <div class="col-sm-12">
@@ -100,13 +100,13 @@
 </div>
    <div class="row">
   <div class="col-sm-12 col-md-6">
-  <img src="assets/images/Client-1-sm-pexels-photo-3545784.jpeg" alt="client-1" class="img-thumbnail"/></div>
+  <img src="assets/images/Client-1-sm-pexels-photo-3545784.jpeg" alt="client-1" class="img-fluid img-thumbnail client-img"/>
         <p>Jess: Truly amazing</p>
         <p class="client-feedback">"I love the atmosphere at Studiofettle, it makes you feel happy whatever service you take"</p>
 </div>
 <div class="col-sm-12 col-md-6">
-    <img src="assets/images/client-2-small-pexels-photo-774909.jpeg" alt="client-2" class="img-thumbnail"/></div>
-    <p>Sharon: I feel alive</div>
+    <img src="assets/images/client-2-small-pexels-photo-774909.jpeg" alt="client-2" class="img-fluid img-thumbnail client-img"/>
+    <p>Sharon: I feel alive</p>
     <p class="client-feedback">"Everytime I leave from my PT session, I feel confident and full of energy"</p>
 </div>
 </div>
