added target=_blank to all pages in footer <a> tag so opens in new browser window

--- a/our-services.html
+++ b/our-services.html
@@ -194,7 +194,7 @@ With a portfolio of clients, including injury, pre wedding, pre and post baby, t
   </div>
   <div class="col-sm-12 col-md-4">
     <h4>Facebook</h4>
-    <a href="https://www.facebook.com/studiofettle/" i class="fab fa-facebook-square" id="fb-font-size"></i></a>
+    <a href="https://www.facebook.com/studiofettle/" target="_blank" i class="fab fa-facebook-square" id="fb-font-size"></i></a>
   </div>
 </div>
 </div>
