--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
   </div>
   <div class="col-sm-12 col-md-4">
     <h4>Facebook</h4>
-    <a href="https://www.facebook.com/studiofettle/" i class="fab fa-facebook-square" id="fb-font-size"></i></a>
+    <a href="https://www.facebook.com/studiofettle/" target="_blank" i class="fab fa-facebook-square" id="fb-font-size"></i></a>
   </div>
 </div>
 </div>
