amended 2 footers to one, incorporating the copyright

--- a/index.html
+++ b/index.html
@@ -142,14 +142,16 @@
   <div class="col-sm-12 col-md-4">
     <h4>Facebook</h4>
     <a href="https://www.facebook.com/studiofettle/" target="_blank" i class="fab fa-facebook-square" id="fb-font-size"></i></a>
+  <!-- Copyright Footer - syntax from w3schools.com -->
+  
+  <p>&copy;2020 vixwebdesigns.co.uk</p>
   </div>
 </div>
 </div>
         </footer>
 
-<!-- Copyright Footer - syntax from w3schools.com -->
 
-        <footer><p>&copy;2020 vixwebdesigns.co.uk</p></footer>
+       
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
