added copyright to join us and our services footer

--- a/join-us.html
+++ b/join-us.html
@@ -135,6 +135,11 @@
     <h4>Join Us</h4>
     <p>Tel: 01472 123456</p>
     <p>Email: studiofettle@info.co.uk</p>
+
+    <!-- Copyright Footer - syntax from w3schools.com -->
+  
+  <p>&copy;2020 vixwebdesigns.co.uk</p>
+
   </div>
   <div class="col-sm-12 col-md-4">
     <h4>Facebook</h4>
@@ -144,10 +149,6 @@
 </div>
         </footer>
 
-
-<!-- Copyright Footer - syntax from w3schools.com -->
-
-        <footer><p>&copy;2020 vixwebdesigns.co.uk</p></footer>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
