--- a/our-services.html
+++ b/our-services.html
@@ -191,6 +191,11 @@ With a portfolio of clients, including injury, pre wedding, pre and post baby, t
     <h4>Join Us</h4>
     <p>Tel: 01472 123456</p>
     <p>Email: studiofettle@info.co.uk</p>
+
+    <!-- Copyright Footer - syntax from w3schools.com -->
+  
+  <p>&copy;2020 vixwebdesigns.co.uk</p>
+
   </div>
   <div class="col-sm-12 col-md-4">
     <h4>Facebook</h4>
@@ -199,10 +204,6 @@ With a portfolio of clients, including injury, pre wedding, pre and post baby, t
 </div>
 </div>
         </footer>
-
-<!-- Copyright Footer - syntax from w3schools.com -->
-
-        <footer><p>&copy;2020 vixwebdesigns.co.uk</p></footer>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
