corrected real phone number on all pages

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
   </div>
   <div class="col-sm-12 col-md-4">
     <h4>Join Us</h4>
-    <p>Tel: 01472 123456</p>
+    <p>Tel: 07986293307</p>
     <p>Email: studiofettle@info.co.uk</p>
 
     <!-- Copyright Footer - syntax from w3schools.com -->
