--- a/our-services.html
+++ b/our-services.html
@@ -189,7 +189,7 @@ With a portfolio of clients, including injury, pre wedding, pre and post baby, t
   </div>
   <div class="col-sm-12 col-md-4">
     <h4>Join Us</h4>
-    <p>Tel: 01472 123456</p>
+    <p>Tel: 07986293307</p>
     <p>Email: studiofettle@info.co.uk</p>
 
     <!-- Copyright Footer - syntax from w3schools.com -->
