moved find us here - from a seperat header and tested in footer col 1

--- a/index.html
+++ b/index.html
@@ -113,16 +113,6 @@
 </div>
 </section>
 
-<!-- 5th section - find us here -->
-
-<section id="find-us-here">
-<div class="container-fluid">
-<div class="row">
-<div class="col-md-12">
-      <h2 class="heading-2 text-center">Find us here</h2> 
-    </div>
-    </div>
-    </section> 
    
 <!-- Footer - Contact details -->
 
@@ -130,6 +120,7 @@
     <div class="container-fluid">
     <div class="row">
     <div class="col-sm-12 col-md-4">
+    <h4>Find us here</h4>
     <h4>Studiofettle</h4>
        <p>Wilton Road, Humberston</p>
        <p>NE Lincs, DN31 2JF</p>
