admended the last commit h4 to h3 in footer to join us and our services

--- a/join-us.html
+++ b/join-us.html
@@ -132,6 +132,7 @@
        <p>NE Lincs, DN31 2JF</p>
   </div>
   <div class="col-sm-12 col-md-4">
+    <h3>Find us here</h3>
     <h4>Join Us</h4>
     <p>Tel: 07986293307</p>
     <p>Email: studiofettle@info.co.uk</p>
