--- a/our-services.html
+++ b/our-services.html
@@ -183,6 +183,7 @@ With a portfolio of clients, including injury, pre wedding, pre and post baby, t
     <div class="container-fluid">
     <div class="row">
     <div class="col-sm-12 col-md-4">
+    <h3>Find us here</h3>
     <h4>Studiofettle</h4>
        <p>Wilton Road, Humberston</p>
        <p>NE Lincs, DN31 2JF</p>
