repeated the last commit to index and our-services

--- a/index.html
+++ b/index.html
@@ -116,8 +116,7 @@
    
 <!-- Footer - Contact details -->
 
-<footer class="footer-background">
-    <div class="container-fluid">
+<footer class="container-fluid footer-background">
     <div class="row">
     <div class="col-sm-12 col-md-4">
     <h3>Find us here</h3>
