--- a/our-services.html
+++ b/our-services.html
@@ -168,8 +168,7 @@ With a portfolio of clients, including injury, pre wedding, pre and post baby, t
 
 <!-- Footer - Contact details -->
 
-<footer class="footer-background">
-    <div class="container-fluid">
+<footer class="container-fluid footer-background">
     <div class="row">
     <div class="col-sm-12 col-md-4">
     <h3>Find us here</h3>
