found spelling error in hypnotherapy paragraph missing y

--- a/our-services.html
+++ b/our-services.html
@@ -149,7 +149,7 @@ With a portfolio of clients, including injury, pre wedding, pre and post baby, t
 <div class="row">
 <div class="col-sm-12 col-md-3">
 <p>Hypnotherapy</p>
-<p>Hpnotherapy can ease many life issues, book in a session to work on freeing your mind</p>
+<p>Hypnotherapy can ease many life issues, book in a session to work on freeing your mind</p>
 </div>
 <div class="col-sm-12 col-md-3">
 <img src="assets/images/hypnotherapy.jpg" alt="hypnotherapy" class="img-thumbnail"/></div>
