changes studiofettle h4 in footer to a <p> to be more in line

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <div class="row">
     <div class="col-sm-12 col-md-4">
     <h3>Find us here</h3>
-    <h4>Studiofettle</h4>
+    <p>Studiofettle</p>
        <p>Wilton Road, Humberston</p>
        <p>NE Lincs, DN31 2JF</p>
   </div>
