--- a/our-services.html
+++ b/our-services.html
@@ -67,7 +67,7 @@
 </div>
     </section>
 
-<!--3rd section - Proprietor Bio-->
+<!--3rd section - Bio-->
 
 <section id="bio-title">
 <div class="container-fluid">
@@ -82,7 +82,7 @@
 <section id="bio">
 <div class="container">
      <div class="row">
-<div class="col-sm-6 col-md-6">
+<div class="col-sm-12 col-md-6">
 <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -97,7 +97,7 @@
   </div>
   </div>
   </div>
-<div class="col-sm-6 col-md-6">
+<div class="col-sm-12 col-md-6">
 <p>Rachael, owner of Studiofettle, prides herself in promoting health and wellbeing. 
 
    With a career stemming from customer service, mental health and personal training, the studio is a haven for feel good services.</p>
