--- a/our-services.html
+++ b/our-services.html
@@ -128,39 +128,24 @@ With a portfolio of clients, including injury, pre wedding, pre and post baby, t
    <div class="container">
    <div class="row">
   <div class="col-sm-12 col-md-3">
+  <img src="assets/images/massage.jpg" alt="massage-room" class="img-fluid img-thumbnail client-img"/>
   <p>Massage Therapy</p>
   <p>We offer sports massage, full relaxation, hot stone, book in with our therapists</p>
 </div>
 <div class="col-sm-12 col-md-3">
-<img src="assets/images/massage.jpg" alt="massage-room" class="img-thumbnail"/></div>
-</div>
-<div class="row">
-<div class="col-sm-12 col-md-3">
+<img src="assets/images/yoga-moves.png" alt="yoga-moves" class="img-fluid img-thumbnail client-img"/>
 <p>Yoga Moves</p>
 <p>Yoga moves brings peace and tranquility, join us to relax the mind</p>
 </div>
 <div class="col-sm-12 col-md-3">
-<img src="assets/images/yoga-moves.png" alt="yoga-moves" class="img-thumbnail"/></div>
-</div>
-</div>
-   </div>
-
-   <div class="container">
-<div class="row">
-<div class="col-sm-12 col-md-3">
+<img src="assets/images/hypnotherapy.jpg" alt="hypnotherapy" class="img-fluid img-thumbnail client-img"/>
 <p>Hypnotherapy</p>
 <p>Hypnotherapy can ease many life issues, book in a session to work on freeing your mind</p>
 </div>
 <div class="col-sm-12 col-md-3">
-<img src="assets/images/hypnotherapy.jpg" alt="hypnotherapy" class="img-thumbnail"/></div>
-</div>
-<div class="row">
-<div class="col-sm-12 col-md-3">
+<img src="assets/images/genevieve-pilates.jpg" alt="genevieve-pilates" class="img-fluid img-thumbnail client-img"/>
 <p>Genevieve Pilates</p>
 <p>Join Genevieve for weekly pilates, be quick its popular</p>
-</div>
-<div class="col-sm-12 col-md-3">
-<img src="assets/images/genevieve-pilates.jpg" alt="genevieve-pilates" class="img-thumbnail"/></div>
 </div>
 </div>
 </div>
