--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
    <div class="row">
   <div class="col-sm-12 col-md-6">
   <img src="assets/images/Client-1-sm-pexels-photo-3545784.jpeg" alt="client-1" class="img-fluid img-thumbnail client-img"/>
-        <p>Jess: Truly amazing</p>
+        <p id="bold">Jess: Truly amazing</p>
         <p class="client-feedback">"I love the atmosphere at Studiofettle, it makes you feel happy whatever service you take"</p>
 </div>
 <div class="col-sm-12 col-md-6">
     <img src="assets/images/client-2-small-pexels-photo-774909.jpeg" alt="client-2" class="img-fluid img-thumbnail client-img"/>
-    <p>Sharon: I feel alive</p>
+    <p id="bold">Sharon: I feel alive</p>
     <p class="client-feedback">"Everytime I leave from my PT session, I feel confident and full of energy"</p>
 </div>
 </div>
