needed a bit of space between the logo and title heading so added class=spacing and .spacing and added margins in index.html

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <div class="container">
 <div class="row">
 <div class="col-sm-12">
-      <h2 class="heading-2 text-center">About Us</h2> 
+      <h2 class="heading-2 text-center spacing">About Us</h2> 
       </div>
       </div>
       <div class="row">
