repeated the last commit to join us and our services

--- a/join-us.html
+++ b/join-us.html
@@ -74,7 +74,7 @@
 <div class="container-fluid">
 <div class="row">
 <div class="col-md-12">
-      <h2 class="heading-2 text-center">Join Us</h2> 
+      <h2 class="heading-2 text-center spacing">Join Us</h2> 
       <p>We welcome your interest in Studiofettle. Please message us to start your journey.</p>
     </div>
     </div>
