--- a/our-services.html
+++ b/our-services.html
@@ -73,7 +73,7 @@
 <div class="container-fluid">
 <div class="row">
 <div class="col-md-12">
-<h2 class="heading-2 text-center">Bio</h2>
+<h2 class="heading-2 text-center spacing">Bio</h2>
 </div>
 </section>
 
