added spacing class to testimonials. missed it out

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-12">
-					<h2 class="heading-2 text-center">Testimonials</h2>
+					<h2 class="heading-2 text-center spacing">Testimonials</h2>
 				</div>
 			</div>
 			<div class="row">
