--- a/join-us.html
+++ b/join-us.html
@@ -133,6 +133,7 @@
 				</div>
 				<div class="col-sm-12 col-md-4">
 					<h4>Facebook</h4>
+                    <p>Head over to our facebook page</p>
 					<a href="https://www.facebook.com/studiofettle/" target="_blank" i class="fab fa-facebook-square"
 						id="fb-font-size"></i></a>
 				</div>
