--- a/our-services.html
+++ b/our-services.html
@@ -126,7 +126,7 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-md-12">
-					<h2 class="heading-2 text-center">Our Services</h2>
+					<h2 class="heading-2 text-center spacing">Our Services</h2>
 				</div>
 	</section>
 
@@ -180,8 +180,10 @@
 			</div>
 			<div class="col-sm-12 col-md-4">
 				<h4>Facebook</h4>
+                <p>Head over to our facebook page</p>
 				<a href="https://www.facebook.com/studiofettle/" target="_blank" i class="fab fa-facebook-square"
 					id="fb-font-size"></i></a>
+                    
 			</div>
 		</div>
 		</div>
