added id=bold to copyright in fotter on all pages

--- a/our-services.html
+++ b/our-services.html
@@ -175,7 +175,7 @@
 
 				<!-- Copyright Footer - syntax from w3schools.com -->
 
-				<p>&copy;2020 vixwebdesigns.co.uk</p>
+				<p id="bold">&copy;2020 vixwebdesigns.co.uk</p>
 
 			</div>
 			<div class="col-sm-12 col-md-4">
