amendment to contact details

--- a/join-us.html
+++ b/join-us.html
@@ -119,12 +119,12 @@
 					<h3>Find us here</h3>
 					<p>Studiofettle</p>
 					<p>Wilton Road, Humberston</p>
-					<p>NE Lincs, DN31 2JF</p>
-				</div>
-				<div class="col-sm-12 col-md-4">
-					<h4>Join Us</h4>
-					<p>Tel: 07986293307</p>
-					<p>Email: studiofettle@info.co.uk</p>
+					<p>NE Lincs, DN36 4AW</p>
+			</div>
+			<div class="col-sm-12 col-md-4">
+				<h4>Join Us</h4>
+				<p>Tel: 07752313632</p>
+				<p>Email: info@studiofettle.co.uk</p>
 
 					<!-- Copyright Footer - syntax from w3schools.com -->
 
