changes to images removed rezised ones as although they were responsive on large screens it wasnt on mobile

--- a/our-services.html
+++ b/our-services.html
@@ -135,7 +135,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-12 col-md-3">
-					<img src="assets/images/massage-resized.jpg" alt="massage-room" class="img-fluid img-thumbnail"/>
+					<img src="assets/images/massage.jpg" alt="massage-room" class="img-fluid img-thumbnail"/>
 					<p id="bold">Massage Therapy</p>
 					<p>We offer sports massage, full relaxation, hot stone, book in with our therapists</p>
 				</div>
