--- a/join-us.html
+++ b/join-us.html
@@ -85,6 +85,14 @@
 
 	<section class="form">
 		<form>
+         <input type="checkbox" name="service-1" value="Massage">
+        <label for="service-1">Massage</label>
+        <input type="checkbox" name="service-2" value="Yoga">
+        <label for="service-2">Yoga</label>
+        <input type="checkbox" name="service-3" value="Hypnotherapy">
+        <label for="service-3">Hypnotherapy</label>
+        <input type="checkbox" name="service-4" value="pilates">
+        <label for="service-1">Pilates</label>
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-sm-12 col-md-6">
