--- a/index.html
+++ b/index.html
@@ -62,10 +62,9 @@
 					<div class="col-sm-12 col-md-4">
 						<img src="assets/images/studiofettle-logo.jpg" alt="logo" class="img-thumbnail"/></div>
 						<div class="col-sm-12 col-md-4">
-							<img src="assets/images/studio-yoga image.jpg" alt="yoga" class="img-thumbnail"/></div>
+							<img src="assets/images/studio-yoga-image.jpg" alt="yoga" class="img-thumbnail"/></div>
 						</div>
 					</div>
-				</div>
 	</section>
 
 	<!-- 3rd section - About us -->
@@ -142,11 +141,10 @@
 			</div>
 			<div class="col-sm-12 col-md-4">
 				<h4>Facebook</h4>
-                <p>Head over to our facebook page</p>
+				<p>Head over to our facebook page</p>
 				<a href="https://www.facebook.com/studiofettle/" target="_blank" i class="fab fa-facebook-square"
-					id="fb-font-size"></i></a>
+					id="fb-font-size"></a>
 			</div>
-		</div>
 		</div>
 	</footer>
 
