--- a/join-us.html
+++ b/join-us.html
@@ -66,8 +66,7 @@
 							<img src="assets/images/pregnancy-pexels-photo-396133.jpeg" alt="pregnancy" class="img-thumbnail"/></div>
 						</div>
 					</div>
-				</div>
-	</section>
+					</section>
 
 	<!-- 3rd section - Join Us -->
 
@@ -79,17 +78,18 @@
 					<p>We welcome your interest in Studiofettle. Please message us to start your journey.</p>
 				</div>
 			</div>
+            </div>
 	</section>
 
 	<!-- 4th section - call to action form -->
 
 	<section class="form">
 		<form>
-			<input type="checkbox" name="service-1" value="Massage">
+			<input type="checkbox" name="service-1" value="massage">
 			<label for="service-1">Massage</label>
-			<input type="checkbox" name="service-2" value="Yoga">
+			<input type="checkbox" name="service-2" value="yoga">
 			<label for="service-2">Yoga</label>
-			<input type="checkbox" name="service-3" value="Hypnotherapy">
+			<input type="checkbox" name="service-3" value="hypnotherapy">
 			<label for="service-3">Hypnotherapy</label>
 			<input type="checkbox" name="service-4" value="pilates">
 			<label for="service-1">Pilates</label>
